--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #FD951F;
-    --secondary-color: #1FD4FD;
+    --secondary-color: #1F83FD;
 }
 
 * {
@@ -50,6 +50,22 @@ body {
 
 .button:hover {
     background-color: #d7780b;
+}
+
+.button.delete {
+    background-color: lightgray;
+}
+
+.button.edit {
+    background-color: var(--secondary-color);
+}
+
+.button.delete:hover {
+    background-color: rgb(223, 62, 62);
+}
+
+.button.edit:hover {
+    background-color: #065AC1;
 }
 
 /* HEADER */
@@ -140,6 +156,10 @@ section.form .header h3 {
     margin-bottom: 16px;
 }
 
+form .fields {
+    margin-bottom: 64px;
+}
+
 form .item {
     margin-bottom: 16px;
 }
@@ -182,6 +202,15 @@ form .item textarea {
     min-height: 150px;
 }
 
-form .fields {
-    margin-bottom: 64px;
+form .item span {
+    padding: 8px 16px;
+    background-color: var(--primary-color);
+    border-radius: 16px;
+    color: white;
+    margin-right: 4px;
+    margin-top: 8px;
+    display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
 }
