--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap');
-
 :root {
     --primary-color: #FD951F;
     --secondary-color: #1F83FD;
@@ -178,6 +176,7 @@ form .item > div:nth-child(1) {
     margin-bottom: 8px;
 }
 
+form .item .input input,
 form .item input[type="text"],
 form .item input[type="number"],
 form .item textarea,
@@ -511,4 +510,27 @@ form .item #photos-preview img {
 .search-products nav ul li a:hover {
     color: black;
     font-weight: bold;
+}
+
+/*USER REGISTER*/
+.user-register.container.form {
+    max-width: 500px;
+}
+
+/*
+.form input[name="email"], 
+.form input[name="password"], 
+.form input[name="passwordRepeat"],
+.form input[name="cpf_cnpj"],
+.form input[name="cep"] {
+    max-width: 60%;
+}
+*/
+
+/*VALIDATE ERRORS*/
+.input .error {
+    background-color: #e74c3c;
+    padding: 4px;
+    border-radius: 4px;
+    color: white;
 }
