--- a/src/app/views/user/fields.njk
+++ b/src/app/views/user/fields.njk
@@ -15,7 +15,7 @@
 <div class="item">
     <div>Senha</div>
     <div class="input">
-        <input type="password" name="password" placeholder="Esconha uma senha segura">
+        <input type="password" name="password" {% if not user.id %} placeholder="Escolha uma senha segura" {% else %} placeholder="Digite sua senha para atualizar seu cadastro" {% endif %}>
     </div>
 </div>
 
