Added animations + buy and sell pages + changed some design + more

--- a/src/app/views/parts/section-products.njk
+++ b/src/app/views/parts/section-products.njk
@@ -13,11 +13,11 @@
                 
                 </div>
 
-                {% if product.price != product.oldPrice %}
-                    <div class="old-price">{{product.oldPrice}}</div>
+                {% if product.formattedPrice != product.formattedOldPrice %}
+                    <div class="old-price">{{product.formattedOldPrice}}</div>
                 {% endif %}
                 
-                <p>{{product.price}}</p>
+                <p>{{product.formattedPrice}}</p>
                 <h4>{{product.name}}</h4>
 
                 <a href="/products/{{product.id}}" class="button">Ver produto</a>
