--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -31,8 +31,8 @@
             <p>Selecione até 6 fotos</p>
         </div>
         <div id="photos-preview">
-        {% if files %}
-            {% for image in files %}
+        {% if product.files %}
+            {% for image in product.files %}
                 <div class="photo" id={{image.id}}>
                 <img src="{{image.src}}" alt="{{img.name}}">
                 <i class="material-icons" onclick="PhotosUpload.removeOldPhoto(event)">close</i>
@@ -47,10 +47,10 @@
 <div class="item">
     <div>Valor</div>
     <div>
-        <input type="text" name="price" placeholder="Preço do produto" value="{{product.price}}" onkeydown="Mask.apply(this, 'formatBRL')">
+        <input type="text" name="price" placeholder="Preço do produto" value="{{product.formattedPrice or product.price}}" onkeydown="Mask.apply(this, 'formatBRL')">
     </div>
-    {% if product.old_price %}
-        <input type="hidden" name="old_price" value="product.old_price">
+    {% if product.formattedOld_price or profuct.old_price %}
+        <input type="hidden" name="old_price" value="{{product.formattedOld_price or profuct.old_price}}">
     {% endif %}
 </div>
 
