--- a/src/app/views/search/index.njk
+++ b/src/app/views/search/index.njk
@@ -7,7 +7,7 @@
 
     <aside>
         <div class="header">
-            <h2>{{search.term}}</h2>
+            <h2>{{search.therm}}</h2>
             <p>{{search.total}} encontrados</p>
         </div>
 
