--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -1,14 +1,11 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-<section class="container form">
+{% call card.render('Editar Produto', 'product-create container') %}
     <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
-
-        <div class="header">
-            <h3>Editar produto {{productId}}</h3>
-        
-        </div>
 
         <div class="fields">
             {% include "products/fields.njk" %}
@@ -22,6 +19,7 @@
         <input type="hidden" name="id" value="{{product.id}}" form="form-delete">
         <button class="button delete" type="submit">Deletar</button>
     </form>
+{% endcall %}
 
     <script>
         const formDelete = document.querySelector('#form-delete');
@@ -32,5 +30,5 @@
             }
         })
     </script>
-</section>
+
 {% endblock content %}
