--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -1,18 +1,21 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
-<section class="product-single container">
+
+{% call card.render('', 'product-single container') %}
 
     <div class="gallery">
         <div class="highlight">
-            {% if not files[0] %}
+            {% if not product.files[0] %}
                 <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO">
             {% else %}
-                <img src="{{files[0].src}}" alt="{{files[0].name}}" onclick="Lightbox.open()">
+                <img src="{{product.files[0].src}}" alt="{{product.files[0].name}}" onclick="Lightbox.open()">
             {% endif %}
 
             <div class="lightbox-target">
-                <img src="{{files[0].src}}" alt="{{files[0].name}}">
+                <img src="{{product.files[0].src}}" alt="{{product.files[0].name}}">
                 <a href="#" class="lightbox-close" onclick="Lightbox.close()">
                     <i class="material-icons">close</i>
                 </a>
@@ -21,7 +24,7 @@
         </div>
 
         <div class="gallery-preview">
-            {% for image in files %}
+            {% for image in product.files %}
                 <img src="{{image.src}}" alt="image.name" {% if loop.index0 == 0 %} class="active" {% endif %} onclick="ImageGallery.setImage(event)">
             {% endfor %}
         </div>
@@ -38,23 +41,31 @@
 
         <div class="price-buy">
             <div class="price">
-                {{product.price}}
-                {% if product.price !== product.old_price %}
-                <span class="old">{{product.old_price}}</span>
+                {{product.formattedPrice}}
+                {% if product.formattedPrice !== product.formattedOldPrice %}
+                <span class="old">{{product.formattedOldPrice}}</span>
                 {% endif %}
             </div>
 
-            <div class="buy">
-                {% if product.status == 0 %}
-                    <p class="unavailable">Indisponível</p>
-                {% elseif product.quantity == 0 %}
-                    <p class="unavailable">Fora de estoque</p>
-                {% else %}
-                    <button class="button">Comprar</button>
-                {% endif %}
-            </div>
+            {% if (session.userId) and (product.user_id == session.userId)%}
+                <p class="unavailable">Você é o vendedor</p>
+            {% else %}
+                <div class="buy">
+                    {% if product.status == 0 %}
+                        <p class="unavailable">Indisponível</p>
+                    {% elseif product.quantity == 0 %}
+                        <p class="unavailable">Fora de estoque</p>
+                    {% else %}
+                        <form action="/users/orders" method="POST">
+                            <input type="hidden" name="id" value="{{product.id}}">
+                            <button class="button">Comprar</button>
+                        </form>
+                    {% endif %}
+                </div>
+            {% endif %}
         </div>
     </div>
 
-</section>
+{% endcall %}
+
 {% endblock content %}
