--- a/src/app/views/user/index.njk
+++ b/src/app/views/user/index.njk
@@ -1,13 +1,12 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-<section class="user-dashboard container form">
-    <form method="POST" action="/users?_method=PUT">
+{% call card.render('Detalhes', 'users-dashboard container') %}
 
-        <div class="header">
-            <h3>Detalhes</h3>
-        </div>
+    <form method="POST" action="/users?_method=PUT">
 
         <div class="fields">
             {% include "user/fields.njk" %}
@@ -22,6 +21,8 @@
         <button class="button delete" type="submit">Deletar</button>
     </form>
 
+{% endcall %}
+    
     <script>
         const formDelete = document.querySelector('#form-delete');
         formDelete.addEventListener('submit', function(event) {
@@ -31,5 +32,5 @@
             }
         })
     </script>
-</section>
+
 {% endblock content %}
