--- a/src/app/views/user/register.njk
+++ b/src/app/views/user/register.njk
@@ -1,20 +1,18 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-<section class="user-register container form">
-    <form method="POST" action="/users/register">
+    {% call card.render('Registre-se', 'user-register container') %}
+        <form method="POST" action="/users/register">
 
-        <div class="header">
-            <h3>Registre-se</h3>
-        
-        </div>
+            <div class="fields">
+                {% include "user/fields.njk" %}
+            </div>
 
-        <div class="fields">
-            {% include "user/fields.njk" %}
-        </div>
+            <button class="button" type="submit">Salvar</button>
+        </form>
+    {% endcall %}
 
-        <button class="button" type="submit">Salvar</button>
-    </form>
-</section>
 {% endblock content %}
